# hanabi-ai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: agent_notes.md  architecture.md  heuristic_agents.md  heuristic_search_closure.md  reinforcement_learning.md  search_foundations.md  testing.md
notebooks/: compare_agents.ipynb
reports/: baseline_5p.json  convention_tempo_5p_reranked.json  search_2p_30g.json  search_baseline_2to5_10g.json
scripts/: demo_trace.py  evaluate_agents.py
src/card_game_ai/: __init__.py
src/card_game_ai/agents/: __init__.py  heuristic_agent.py  random_agent.py
src/card_game_ai/game/: actions.py  cards.py  engine.py  observation.py  rules.py
src/card_game_ai/training/: __init__.py  self_play.py
src/card_game_ai/visualization/: cli.py
src/hanabi_ai/: __init__.py
src/hanabi_ai/agents/: __init__.py  beliefs.py  random.py  search_agent.py
src/hanabi_ai/game/: __init__.py  actions.py  engine.py  observation.py
src/hanabi_ai/search/: __init__.py  determinization.py  hint_value.py  planner.py  rollout.py
src/hanabi_ai/tools/: __init__.py  analyze_search_opportunities.py  compare_agent_decisions.py  demo_basic_trace.py  demo_conservative_trace.py  demo_convention_trace.py  evaluate_agents.py  (+3 more)
tests/: test_game_engine.py  test_heuristic_agent.py  test_random_agent.py  test_self_play.py  test_visualization_cli.py
tests/agents/: test_beliefs.py  test_random.py
tests/game/: __init__.py  test_engine.py  test_observation.py
tests/heuristic/: __init__.py  _shared.py  test_basic_agent.py  test_conservative_agent.py
tests/search/: test_determinization.py  test_hint_value.py  test_planner.py
tests/tools/: test_analyze_search_opportunities.py  test_compare_agent_decisions.py  test_evaluate_agents.py
tests/training/: test_behavior_cloning.py  test_reinforce.py  test_self_play.py  test_warm_start.py
tests/visualization/: test_cli.py
(+35 files in other folders)
