[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanabi-ai"
version = "0.1.0"
description = "Hanabi engine, heuristic agents, and self-play tooling."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Hanabi AI contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ipykernel",
  "jupyter",
]

[project.scripts]
hanabi-demo-basic = "hanabi_ai.tools.demo_basic_trace:main"
hanabi-demo-convention = "hanabi_ai.tools.demo_convention_trace:main"
hanabi-evaluate = "hanabi_ai.tools.evaluate_agents:main"
hanabi-compare-decisions = "hanabi_ai.tools.compare_agent_decisions:main"
hanabi-analyze-search = "hanabi_ai.tools.analyze_search_opportunities:main"
hanabi-train-behavior-cloning = "hanabi_ai.tools.train_behavior_cloning:main"
hanabi-train-reinforce = "hanabi_ai.tools.train_reinforce:main"
hanabi-train-warm-start = "hanabi_ai.tools.train_warm_start:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
